avance 2: stylo casi listo

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <a href="#" class="logo"><span>Steven</span> Chaves</a>
       <nav class="navbar">
         <a href="#" class="active">Portfolio</a>
-        <a href="#">Experience</a>
-        <a href="#">Projects</a>
-        <a href="#">Education</a>
+        <a href="#">Skills</a>
+        <a href="#">Location</a>
+        <a href="#">Contact Me</a>
       </nav>
 
       <a href="#" class="contact">Contact Me</a>
@@ -38,8 +38,8 @@
           exercitationem tempora eum?
         </p>
         <div class="btn-box">
-          <button class="btn-1">Hire Me</button>
-          <button class="btn-2">Experience</button>
+          <button class="btn-1">Skills</button>
+          <button class="btn-2">Contact</button>
         </div>
       </div>
       <div class="img-box">
@@ -91,37 +91,39 @@
     </section>
 
     <section class="about">
-      <div class="contact-form">
-        <h2 class="contact-me">Get <span>Resume</span></h2>
-        <form action="#">
-          <div class="input-box">
-            <input type="text" placeholder="Full Name" />
-            <input type="email" placeholder="Email" />
+      <div class="contact-container">
+        <div class="location-box">
+          <h2 class="contact-me">My <span>Location</span></h2>
+          <div class="location">
+            <p>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3930.030899692791!2d-84.06672232382147!3d9.931384590170559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0e3f13462cc7b%3A0x97219232a6ee2da8!2sCenfotec!5e0!3m2!1sen!2scr!4v1716435671803!5m2!1sen!2scr"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </p>
           </div>
+        </div>
+        <div class="contact-form">
+          <h2 class="contact-me">Get <span>Resume</span></h2>
+          <form action="#">
+            <div class="input-box">
+              <input type="text" placeholder="Full Name" />
+              <input type="email" placeholder="Email" />
+            </div>
 
-          <textarea
-            name=""
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="Write your message here"
-          ></textarea>
-          <input type="submit" value="Get Resume" class="btn-1" />
-        </form>
-      </div>
-
-      <div id="location">
-        <p>
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3929.745554788397!2d-84.13373892382127!3d9.95511559014799!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8fa0fba8d276014f%3A0x7c4805dbf3978ae5!2sEntreMadera.cr!5e0!3m2!1sen!2scr!4v1716349593953!5m2!1sen!2scr"
-            width="700"
-            height="700"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
-        </p>
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Write your message here"
+            ></textarea>
+            <input type="submit" value="Get Resume" class="btn-1" />
+          </form>
+        </div>
       </div>
     </section>
   </body>
